<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addAlbum"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_sort_artist"
        android:title="@string/sort_by_artist"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_sort_genre"
        android:title="@string/sort_by_genre"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_sort_rating"
        android:title="@string/sort_by_rating"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_sort_price_high"
        android:title="@string/sort_by_price_high"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_sort_price_low"
        android:title="@string/sort_by_price_low"
        app:showAsAction="never" />

</menu>
